--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Add logo -->
+		<style>
+			/* Style for the logo */
+			#logo {
+				position: absolute;
+				top: 10px; /* Adjust the distance from the top */
+				left: 10px; /* Adjust the distance from the left */
+				width: 100px; /* Adjust the width of the logo */
+				height: auto; /* Maintain aspect ratio */
+			}
+		</style>
 	</head>
 	<body class="is-preload">
+        <!-- Image -->
+        <img id="logo" src="images/logo.png" alt="Logo" />		
 
 		<!-- Header -->
 			<section id="header" class="dark">
@@ -374,7 +387,7 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://nvjrepo.notion.site/Hi-I-m-James-c44b5f1a6e184e0d983243e27bf3e63d?pvs=74" class="icon brands fa-notion"><span class="label">Notion</span></a></li>
+					<li><a href="https://nvjrepo.notion.site/Hi-I-m-James-c44b5f1a6e184e0d983243e27bf3e63d?pvs=74" class="icon brands fa-sitemap"><span class="label">Notion</span></a></li>
 					<li><a href="https://www.linkedin.com/in/nam-nguyen-james-227a64114/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/nvjrepo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
