--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic03.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic04.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/datas_pic06.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic06s.jpg" alt="" /></a></div>
 								</div>
 							</div>
 						</div>
@@ -147,7 +147,7 @@
 				</header>
 				<div class="content dark style3">
 					<div class="container">
-						<span class="image featured"><img src="images/data_pic07.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/data_pic07s.jpg" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<h3>The whole process and platforms we use</h3>
