--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				left: 10px; /* Adjust the distance from the left */
 				width: 100px; /* Adjust the width of the logo */
 				height: auto; /* Maintain aspect ratio */
+				z-index: 999; /* Ensure the logo is displayed on top */
 			}
 		</style>
 	</head>
@@ -177,7 +178,7 @@
 								massive datasets efficiently.</p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>NVJ leverage Airbyte, an open-source data integration platform, to streamline its data processes in various ways. Firstly, 
+								<p>NVJ leverages Airbyte, an open-source data integration platform, to streamline its data processes in various ways. Firstly, 
 								Airbyte facilitates unified data collection by connecting to diverse sources like databases, APIs, and file systems, simplifying 
 								the process without requiring custom solutions. 
 								<p>Secondly, it enables centralized data warehousing, allowing data from multiple sources, including Shopify, Facebook ads, Google ads or more 
