--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
 				<div class="copyright">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li>
+						<li><a href="privacy-policy.html" class="button">Privacy Policy</a></li>
 					</ul>
 				</div>
 			</section>
