--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,23 +1,73 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file if you have one -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file if needed -->
 </head>
 <body>
     <header>
         <h1>Privacy Policy</h1>
     </header>
     <main>
-        <p>Last Updated: [Date]</p>
+        <p><strong>Last Updated:</strong> [Date]</p>
+
         <h2>Introduction</h2>
-        <p>[Your Privacy Policy content here]</p>
-        <!-- Add the rest of your privacy policy content -->
+        <p>Airbyte data sync ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our services, including our integration of Facebook Ads data into BigQuery and its visualization in Looker Studio.</p>
+
+        <h2>1. Information We Collect</h2>
+
+        <h3>1.1 Facebook Ads Data</h3>
+        <p>We collect and process data from Facebook Ads, including but not limited to ad performance metrics, audience insights, and other relevant advertising data. This data is ingested into Google BigQuery using the Airbyte platform and is subsequently used for creating dashboards in Looker Studio.</p>
+
+        <h3>1.2 Automatically Collected Information</h3>
+        <p>When you use our app, we may automatically collect certain information about your device and usage, such as your IP address, browser type, operating system, and access times.</p>
+
+        <h2>2. How We Use Your Information</h2>
+
+        <h3>2.1 To Provide Our Services</h3>
+        <p>We use the data collected to ingest and store Facebook Ads data in BigQuery and to create data visualizations and dashboards in Looker Studio. This helps us provide you with insights and analytics on your ad performance.</p>
+
+        <h3>2.2 To Improve Our Services</h3>
+        <p>We may use aggregated and anonymized data to analyze trends and improve the quality of our services.</p>
+
+        <h2>3. How We Share Your Information</h2>
+
+        <h3>3.1 Third-Party Service Providers</h3>
+        <p>We may share your data with third-party service providers who assist us in operating our services, such as Airbyte for data ingestion, Google BigQuery for data storage, and Looker Studio for data visualization.</p>
+
+        <h3>3.2 Legal Requirements</h3>
+        <p>We may disclose your information if required by law or in response to valid requests by public authorities (e.g., a court or government agency).</p>
+
+        <h2>4. Data Security</h2>
+        <p>We implement appropriate technical and organizational measures to protect your data from unauthorized access, disclosure, alteration, or destruction. However, please be aware that no method of transmission over the Internet or method of electronic storage is 100% secure.</p>
+
+        <h2>5. Your Data Rights</h2>
+        <p>Depending on your location, you may have the following rights regarding your data:</p>
+        <ul>
+            <li><strong>Access:</strong> You have the right to request access to the personal data we hold about you.</li>
+            <li><strong>Correction:</strong> You have the right to request the correction of any inaccurate personal data we hold about you.</li>
+            <li><strong>Deletion:</strong> You have the right to request that we delete your personal data, subject to certain conditions.</li>
+            <li><strong>Objection:</strong> You have the right to object to our processing of your personal data under certain circumstances.</li>
+        </ul>
+        <p>To exercise any of these rights, please contact us at [Your Contact Email].</p>
+
+        <h2>6. International Data Transfers</h2>
+        <p>Your data may be transferred to and processed in countries other than your country of residence. By using our services, you consent to the transfer of your data to countries outside of your country of residence, which may have different data protection laws.</p>
+
+        <h2>7. Changes to This Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. We will notify you of any significant changes by posting the new Privacy Policy on our website.</p>
+
+        <h2>8. Contact Us</h2>
+        <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+        <p>Email: nvjrepo@gmail.com </p>
+        <p>Address: 12 Huynh Tinh Của, ward 8, district 3, Ho Chi Minh city, 700000, Vietnam </p>
     </main>
     <footer>
-        <p>&copy; [Year] [Your Company Name]. All rights reserved.</p>
+        <p>&copy; 2024 NVJREPO. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
